# writ-v1

./: .editorconfig  .env.example  .gitattributes  .gitignore  .merge-marker  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  add_commits.py  generate_history.py  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  display.rs  main.rs
cli/src/commands/: config_cmd.rs  delegate.rs  dispute.rs  mint.rs  reputation.rs  revoke.rs  status.rs  verify.rs
docs/: architecture.md  integration-guide.md  self-audit.md  zk-verification.md
examples/: README.md  delegate-agent.ts  integrate-gate.ts  mint-hand.ts  mint-writ.ts  sdk-quickstart.ts  verify-agent.ts
idl/: hand_gate.json  hand_registry.json  reputation.json
programs/delegation/: Cargo.toml  README.md
programs/delegation/src/: constants.rs  error.rs  lib.rs
programs/delegation/src/instructions/: consume.rs  delegate.rs  mod.rs  revoke_delegation.rs  update_scope.rs
programs/delegation/src/state/: delegation.rs  mod.rs
programs/hand-gate/: README.md
programs/hand-gate/src/: lib.rs  macros.rs  verify.rs
programs/hand-gate/src/instructions/: mod.rs  verify_agent.rs  verify_with_scope.rs
programs/hand-registry/: Cargo.toml  README.md
programs/hand-registry/src/: constants.rs  error.rs  lib.rs
programs/hand-registry/src/instructions/: revoke_hand.rs
programs/hand-registry/src/state/: hand.rs  verifier.rs
programs/reputation/: Cargo.toml  README.md
programs/reputation/src/: constants.rs  error.rs  lib.rs
programs/reputation/src/instructions/: initialize_reputation.rs  mod.rs  open_dispute.rs  recalculate_score.rs  register_reporter.rs  report_action.rs  resolve_dispute.rs
programs/reputation/src/state/: dispute.rs  reporter.rs  reputation.rs
programs/writ-gate/: Cargo.toml  README.md
programs/writ-gate/src/: error.rs  lib.rs  macros.rs  verify.rs
programs/writ-gate/src/instructions/: verify_agent.rs  verify_with_reputation.rs  verify_with_scope.rs
programs/writ-gate/src/state/: mod.rs
programs/writ-registry/: Cargo.toml
programs/writ-registry/src/: constants.rs  error.rs  lib.rs
programs/writ-registry/src/instructions/: initialize_hand.rs  mod.rs  revoke_hand.rs
programs/writ-registry/src/state/: hand.rs  mod.rs  verifier.rs
sdk/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  errors.ts  index.ts  pda.ts  serialization.ts  types.ts  utils.ts
sdk/src/__tests__/: pda.test.ts  serialization.test.ts  utils.test.ts
tests/: delegation.ts  gate.ts  hand-registry.ts  reputation.ts  writ-registry.ts
