[workspace]
members = [
    "programs/hand-registry",
    "programs/delegation",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["HAND Protocol core"]
license = "MIT"
repository = "https://github.com/hand-protocol/hand"
homepage = "https://handprotocol.xyz"
readme = "README.md"
rust-version = "1.78"
description = "Anonymous KYA (Know Your Agent) protocol on Solana — ZK human verification and scoped agent delegation"
keywords = ["solana", "anchor", "identity", "zk-proofs", "ai-agents"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "=1.18.26"
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
bs58 = "0.5"
sha2 = "0.10"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
