[workspace]
members = [
    "programs/hand-registry",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HAND Protocol core"]
license = "MIT"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "=1.18.26"
borsh = "1.5"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
