[package]
name = "delegation"
version.workspace = true
edition.workspace = true
description = "HAND Protocol — scoped agent delegation"

[lib]
crate-type = ["cdylib", "lib"]
name = "delegation"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
hand_registry = { path = "../hand-registry", features = ["cpi"] }
