[package]
name = "hand_registry"
version.workspace = true
edition.workspace = true
description = "HAND Protocol — ZK-based anonymous identity registry"

[lib]
crate-type = ["cdylib", "lib"]
name = "hand_registry"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
