[package]
name = "writ_gate"
version.workspace = true
edition.workspace = true
description = "WRIT Protocol — agent verification gateway"

[lib]
crate-type = ["cdylib", "lib"]
name = "writ_gate"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
writ_registry = { path = "../writ-registry", features = ["cpi"] }
delegation = { path = "../delegation", features = ["cpi"] }
reputation = { path = "../reputation", features = ["cpi"] }
